--- a/index.html
+++ b/index.html
@@ -1,11 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Uso de GIT</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Meme</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f0f0f0;
+        }
+        .meme-container {
+            position: relative;
+            display: inline-block;
+            text-align: center;
+        }
+        .meme-container img {
+            max-width: 100%;
+            height: auto;
+        }
+        .meme-text {
+            position: absolute;
+            width: 100%;
+            left: 50%;
+            transform: translateX(-50%);
+            color: white;
+            font-size: 2em;
+            font-family: 'Impact', 'Arial Black', sans-serif;
+            text-shadow: 2px 2px 4px #000;
+            padding: 0 10px;
+            box-sizing: border-box;
+        }
+        .top-text {
+            top: 10px;
+        }
+        .bottom-text {
+            bottom: 10px;
+        }
+    </style>
 </head>
 <body>
-  
+    <div class="meme-container">
+        <img src="img/img.jpg" alt="Meme">
+        <div class="meme-text top-text">Yo y los panas</div>
+        <div class="meme-text bottom-text">BOMBOCLAAAA</div>
+    </div>
 </body>
 </html>
