--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Uso de GIT</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Modifiable Navbar</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  
+
+    <nav class="navbar">
+        <div class="navbar-container">
+            <a href="#" class="navbar-brand">MySite</a>
+            <div class="navbar-menu" id="navbarMenu">
+                <a href="#home" class="navbar-item">Home</a>
+                <a href="#about" class="navbar-item">About</a>
+                <a href="#services" class="navbar-item">Services</a>
+                <a href="#contact" class="navbar-item">Contact</a>
+            </div>
+            <div class="navbar-toggle" id="navbarToggle">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+        </div>
+    </nav>
+
+    <script src="script.js"></script>
 </body>
 </html>
