--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             <a href="#" class="navbar-brand">MySite</a>
             <div class="navbar-menu" id="navbarMenu">
                 <a href="#home" class="navbar-item">Home</a>
+                <a href="dylan.html" class="navbar-item">Dylan </a>
+                <a href="assjrc.html" class="navbar-item">Asshly</a>
+                <a href="ale.html" class="navbar-item">Alejandro</a>
                 <a href="#about" class="navbar-item">About</a>
                 <a href="#services" class="navbar-item">Services</a>
                 <a href="#contact" class="navbar-item">Contact</a>
