Se agrego maidelyn al menu

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <a href="#marketing" class="submenu-item">Joshua</a>
                         <a href="#marketing" class="submenu-item">Aaron</a>
                         <a href="#marketing" class="submenu-item">Daniel</a>
-                        <a href="#marketing" class="submenu-item">Maidelyn</a>
+                        <a href="maidelyn.html" class="submenu-item">Maidelyn</a>
                         <a href="#marketing" class="submenu-item">Ashley M</a>
                         <a href="#marketing" class="submenu-item">Sebastián</a>
                         <a href="#marketing" class="submenu-item">Carlos</a>
