--- a/Karen.html
+++ b/Karen.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link style="" shref="">
     <title>Document</title>
 </head>
 <body>
+    <h1>Curriculum</h1>
+    <h2>Karen Eliza Sánchez Sánchez</h2>
     <input type="button" value="">
 </body>
 </html>
