--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
                     <div class="submenu">
                         <a href="#webdesign" class="submenu-item">Asshly</a>
                         <a href="#seo" class="submenu-item">Dylan</a>
-                        <a href="#marketing" class="submenu-item">Alejandro</a>
-                        <a href="#marketing" class="submenu-item">Jeremy</a>
-                        <a href="#marketing" class="submenu-item">Adrian</a>
-                        <a href="#marketing" class="submenu-item">Yoel</a>
-                        <a href="#marketing" class="submenu-item">Karen</a>
-                        <a href="#marketing" class="submenu-item">Danny</a>
-                        <a href="#marketing" class="submenu-item">Joshua</a>
+                        <a href="ale.html" class="submenu-item">Alejandro</a>
+                        <a href="jeremy.html" class="submenu-item">Jeremy</a>
+                        <a href="adrian.html" class="submenu-item">Adrian</a>
+                        <a href="yoel.html" class="submenu-item">Yoel</a>
+                        <a href="kare.html" class="submenu-item">Karen</a>
+                        <a href="danny" class="submenu-item">Danny</a>
+                        <a href="joshua.html" class="submenu-item">Joshua</a>
                         <a href="#marketing" class="submenu-item">Aaron</a>
                         <a href="#marketing" class="submenu-item">Daniel</a>
                         <a href="maidelyn.html" class="submenu-item">Maidelyn</a>
