--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a href="#services" class="navbar-item submenu-toggle">Programadores <i class="fas fa-caret-down"></i></a>
                     <div class="submenu">
                         <a href="#webdesign" class="submenu-item">Asshly</a>
-                        <a href="#seo" class="submenu-item">Dylan</a>
+                        <a href="crclum.html" class="submenu-item">Dylan</a>
                         <a href="ale.html" class="submenu-item">Alejandro</a>
                         <a href="jeremy.html" class="submenu-item">Jeremy</a>
                         <a href="adrian.html" class="submenu-item">Adrian</a>
@@ -32,7 +32,7 @@
                         <a href="kare.html" class="submenu-item">Karen</a>
                         <a href="danny" class="submenu-item">Danny</a>
                         <a href="joshua.html" class="submenu-item">Joshua</a>
-                        <a href="#marketing" class="submenu-item">Aaron</a>
+                        <a href="Aaron.html" class="submenu-item">Aaron</a>
                         <a href="#marketing" class="submenu-item">Daniel</a>
                         <a href="maidelyn.html" class="submenu-item">Maidelyn</a>
                         <a href="#marketing" class="submenu-item">Ashley M</a>
