--- a/Aponte.html
+++ b/Aponte.html
@@ -10,11 +10,11 @@
 
     <nav class="navbar">
         <div class="navbar-container">
-            <a href="#" class="navbar-brand">MySite</a>
+            <a href="#" class="navbar-brand">Progra</a>
             <div class="navbar-menu" id="navbarMenu">
                 <a href="#home" class="navbar-item">Home</a>
                 <a href="#about" class="navbar-item">About</a>
-                <a href="#services" class="navbar-item">Services</a>
+                <a href="#services" class="navbar-item">Programadores</a>
                 <a href="#contact" class="navbar-item">Contact</a>
             </div>
             <div class="navbar-toggle" id="navbarToggle">
