--- a/daniel.html
+++ b/daniel.html
@@ -7,51 +7,32 @@
 <style>
     body {
         font-family: Arial, sans-serif;
-        background-color: #f0f0f0;
+        margin: 0;
+        padding: 0;
     }
-    .login-box {
-        width: 300px;
-        padding: 20px;
-        background-color: #fff;
-        margin: 100px auto;
-        border-radius: 5px;
-        box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    .navbar{
+        background-color: #333;
+        border-radius: 10px;
+        height: 25px;
+        display: flex;
+        justify-content: space-between;
     }
-    .login-box h2 {
-        text-align: center;
-        margin-bottom: 20px;
+    .brand {
+        font-size: 1.5rem;
+        font-weight: bold;
+        color: white;
+        text-decoration: none;
+        
     }
-    .login-box input[type="text"],
-    .login-box input[type="password"] {
-        width: calc(100% - 20px);
-        padding: 10px;
-        margin-bottom: 15px;
-        border: 1px solid #ddd;
-        border-radius: 3px;
-    }
-    .login-box input[type="submit"] {
-        width: 100%;
-        padding: 10px;
-        background-color: #4CAF50;
-        color: #fff;
-        border: none;
-        border-radius: 3px;
-        cursor: pointer;
-        font-size: 16px;
-    }
-    .login-box input[type="submit"]:hover {
-        background-color: #45a049;
+    .navbar-name{
+        justify-content: center;
     }
 </style>
 </head>
 <body>
-    <div class="login-box">
-        <h2>Login</h2>
-        <form action="/login" method="post">
-            <input type="text" name="username" placeholder="Username" required>
-            <input type="password" name="password" placeholder="Password" required>
-            <input type="submit" value="Login">
-        </form>
+    <div class="navbar">
+        <a href="index.html" class="brand">MySite</a>
+        <div class="navbar-name"><h3>Daniel</h3></div>
     </div>
 </body>
 </html>
