--- a/crclum.html
+++ b/crclum.html
@@ -14,6 +14,7 @@
                 <p>Dirección: San Ramon, Alajuela, Costa Rica</p>
                 <p>Teléfono: +506 6015 6312</p>
                 <p>Email: dylamayo06@gmail.com</p>
+                <img src="img/yo.jfif" alt="" class="imgs">
             </div>
         </header>
 
