--- a/Ashley.html
+++ b/Ashley.html
@@ -46,8 +46,8 @@
     <header>
         <h1>Nombre</h1>
         <p>Teléfono: +506 86182011</p>
-        <p>Email: correo@example.com</p>
-        <p>LinkedIn: <a href="https://linkedin.com/tu_perfil">linkedin.com/tu_perfil</a></p>
+        <p>Email: correo@ejemplo.com</p>
+        
     </header>
 
     <section>
@@ -65,10 +65,10 @@
             <p><strong>Empresa:</strong> Nombre de la Empresa</p>
             <p><strong>Fecha de inicio:</strong></p><input type="date">
             <p><strong>Fecha de finalizacion:</strong></p><input type="date">
-            <p><strong>Descripción:</strong> Breve descripción de tus responsabilidades y logros.</p>
+            <p><strong>Descripción:</strong> descripción corta de logros.</p>
         </article>
     </section>
-
+ 
     <section>
         <h2>Educación</h2>
         <article>
@@ -93,8 +93,6 @@
         </ul>
     </section>
 
-    <footer>
-        <p>© 2024 Mi Nombre. Todos los derechos reservados.</p>
-    </footer>
+    
 </body>
 </html>
