--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
                 <div class="navbar-item submenu-container">
                     <a href="#services" class="navbar-item submenu-toggle">Programadores <i class="fas fa-caret-down"></i></a>
                     <div class="submenu">
-                        <a href="#webdesign" class="submenu-item">Asshly</a>
+                        <a href="asshrc.html" class="submenu-item">Asshly</a>
                         <a href="crclum.html" class="submenu-item">Dylan</a>
                         <a href="ale.html" class="submenu-item">Alejandro</a>
                         <a href="jeremy.html" class="submenu-item">Jeremy</a>
                         <a href="adrian.html" class="submenu-item">Adrian</a>
-                        <a href="yoel.html" class="submenu-item">Yoel</a>
+                        <a href="Yoel.html" class="submenu-item">Yoel</a>
                         <a href="kare.html" class="submenu-item">Karen</a>
                         <a href="danny" class="submenu-item">Danny</a>
                         <a href="joshua.html" class="submenu-item">Joshua</a>
