--- a/daniel.html
+++ b/daniel.html
@@ -10,29 +10,36 @@
         margin: 0;
         padding: 0;
     }
-    .navbar{
-        background-color: #333;
-        border-radius: 10px;
-        height: 25px;
+
+    .central {
         display: flex;
-        justify-content: space-between;
-    }
-    .brand {
-        font-size: 1.5rem;
-        font-weight: bold;
-        color: white;
-        text-decoration: none;
-        
-    }
-    .navbar-name{
-        justify-content: center;
     }
 </style>
 </head>
 <body>
-    <div class="navbar">
-        <a href="index.html" class="brand">MySite</a>
-        <div class="navbar-name"><h3>Daniel</h3></div>
+
+<!-- documento central -->
+<div class="central">
+<!-- ----------------------------------------------derecha----------------------------------------------- -->
+    <div>
+        <img src="" alt="">
     </div>
+
+    <div>
+        <div><h1>Nombre:</h1></div>
+        <div><h3>Daniel Isaac Rodríguez Rojas</h3></div>
+    </div>
+
+<!-- ----------------------------izquierda---------------------------------------- -->
+    <div>
+
+    </div>
+</div>
+
+<!-- parte inferior -->
+<div>
+    <div></div>
+    <div></div>
+</div>
 </body>
 </html>
