--- a/joshua.html
+++ b/joshua.html
@@ -11,6 +11,7 @@
             margin: 0;
             padding: 0;
         }
+        
         header {
             background-color: #490a41;
             color: white;
@@ -42,9 +43,36 @@
             bottom: 0;
             width: 100%;
         }
+
+        .navbar {
+            background-color: #fdfcfc;
+            overflow: hidden;
+            border-radius: 12px;
+        }
+        .navbar a {
+            float: left;
+            display: block;
+            color: #000000;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+        .navbar a:hover {
+            background-color: #6a107a;
+            color: rgb(0, 0, 0);
+        }
     </style>
 </head>
 <body>
+
+    <header>
+
+        <nav class="navbar">
+            <a href="#volver">Volver</a>
+            <a href=plantilla.htm>Plantilla</a>
+        </nav>
+        
+    </header>
     <header>
         <h1>Deportivo saprissa</h1>
         <p>¡Pasión por el fútbol!</p>
