--- a/daniel.html
+++ b/daniel.html
@@ -14,6 +14,10 @@
     .central {
         display: flex;
     }
+    .img {
+        height: 200px;
+        border-radius: 200px;
+    }
 </style>
 </head>
 <body>
@@ -21,18 +25,27 @@
 <!-- documento central -->
 <div class="central">
 <!-- ----------------------------------------------derecha----------------------------------------------- -->
-    <div>
-        <img src="" alt="">
-    </div>
-
-    <div>
-        <div><h1>Nombre:</h1></div>
-        <div><h3>Daniel Isaac Rodríguez Rojas</h3></div>
+    <div class="derecha">
+        <div>
+            <img class="img" src="" alt="">
+        </div>
+    
+        <div>
+            <div><h1>Nombre</h1></div>
+            <div><h3>keylor</h3></div>
+        </div>
     </div>
 
 <!-- ----------------------------izquierda---------------------------------------- -->
-    <div>
-
+    <div class="izquierda">
+        <div>
+            <div><h2>historia</h2></div>
+            <div></div>
+        </div>
+        <div>
+            <div><h2>logros</h2></div>
+            <div></div>
+        </div>
     </div>
 </div>
 
