agreglae el  boton

--- a/Aaron.html
+++ b/Aaron.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carrusel Mejorado</title>
@@ -140,7 +141,7 @@
         // Mostrar el primer slide
         showSlide(index);
     </script>
-
+    
 <button class="button">
     <div class="button-box">
       <span class="button-elem">
@@ -159,97 +160,6 @@
       </span>
     </div>
   </button>
-  <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Button Example</title>
-  <style>
-    .button {
-      display: block;
-      position: relative;
-      width: 56px;
-      height: 56px;
-      margin: 0;
-      overflow: hidden;
-      outline: none;
-      background-color: transparent;
-      cursor: pointer;
-      border: 0;
-    }
-
-    .button:before,
-    .button:after {
-      content: "";
-      position: absolute;
-      border-radius: 50%;
-      inset: 7px;
-    }
-
-    .button:before {
-      border: 4px solid #f0eeef;
-      transition: opacity 0.4s cubic-bezier(0.77, 0, 0.175, 1) 80ms,
-        transform 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955) 80ms;
-    }
-
-    .button:after {
-      border: 4px solid #96daf0;
-      transform: scale(1.3);
-      transition: opacity 0.4s cubic-bezier(0.165, 0.84, 0.44, 1),
-        transform 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-      opacity: 0;
-    }
-
-    .button:hover:before,
-    .button:focus:before {
-      opacity: 0;
-      transform: scale(0.7);
-      transition: opacity 0.4s cubic-bezier(0.165, 0.84, 0.44, 1),
-        transform 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-    }
-
-    .button:hover:after,
-    .button:focus:after {
-      opacity: 1;
-      transform: scale(1);
-      transition: opacity 0.4s cubic-bezier(0.77, 0, 0.175, 1) 80ms,
-        transform 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955) 80ms;
-    }
-
-    .button-box {
-      display: flex;
-      position: absolute;
-      top: 0;
-      left: 0;
-    }
-
-    .button-elem {
-      display: block;
-      width: 20px;
-      height: 20px;
-      margin: 17px 18px 0 18px;
-      transform: rotate(180deg);
-      fill: #f0eeef;
-    }
-
-    .button:hover .button-box,
-    .button:focus .button-box {
-      transition: 0.4s;
-      transform: translateX(-56px);
-    }
-  </style>
-</head>
-<body>
-  <button class="button">
-    <div class="button-box">
-      <svg class="button-elem" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-        <path d="M12 2L2 12h20L12 2z"/>
-      </svg>
-    </div>
-  </button>
-</body>
-</html>
   
 </body>
 </html>
