--- a/Ashley.html
+++ b/Ashley.html
@@ -89,7 +89,7 @@
         <ul>
             <li>Habilidad 1</li>
             <li>Habilidad 2</li>
-            <li>Habilidad 3</li>
+            <li>Habilidads 3</li>
         </ul>
     </section>
 
