--- a/Yoel.html
+++ b/Yoel.html
@@ -120,7 +120,6 @@
                   Compasión
                   Sociabilidad
                   Colaboración
-                  Curiosidad
                   Autocontrol
                   Entusiasmo
                   Flexibilidad
@@ -142,12 +141,14 @@
                 <li>Millonario</li>
                 <!-- Agrega más habilidades aquí -->
             </ul>
-        </section>
+        </section>    
+        <button type="button" class="btn btn-primary">salir</button>
     </div>
 
     <footer>
         <p>&copy; 2024 Yoel Valverde. Todos los derechos reservados.</p>
     </footer>
+
 </body>
 </html>
 
