--- a/daniel.html
+++ b/daniel.html
@@ -40,7 +40,7 @@
     <div class="izquierda">
         <div>
             <div><h2>historia</h2></div>
-            <div></div>
+            <div>La historia de Keylor Navas inició el 15 de diciembre de 1986; nació en San Isidro, San José, Costa Rica, y es hijo de Sandra Gamboa y Freddy Navas. Sin embargo, cuando Keylor y su hermana, Keilyn, eran niños tuvieron que dejar de ver a sus padres, porque decidieron irse a Estados Unidos en busca del ‘sueño americano’.</div>
         </div>
         <div>
             <div><h2>logros</h2></div>
