--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cuadernillo de Práctica para Diseño y Desarrollo Web</title>
+    <link rel="stylesheet" href="estilo.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism.min.css" integrity="sha512-1rP6FBn5C8R8ZtXLJxzK1IKCFKFs29jTGg9I82u3/m5fsr8t+1niPrOziAFd9Y0keZT3Ns1wAATv5scz6dOe6Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/plugins/line-numbers/prism-line-numbers.min.css" integrity="sha512-bcGmYMt6MG5u4xwdyJ7tcm9eWTdlmFRJjp0E1J2zAyW4mZ2UP0kcbJlTh2VTr0qJDy06ZMCv+Z9JgVW7LKxI6Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
@@ -132,6 +133,8 @@
                 <li><a href="#componentes">1. Diseño en el Nivel de Componentes</a></li>
                 <li><a href="#elementos">2. Elementos del Diseño de la Interfaz de Usuario</a></li>
                 <li><a href="#patrones">3. Diseño Basado en Patrones</a></li>
+                        <!-- Botón para volver al índice -->
+        <a href="crclum.html" class="btn-regreso">Ir al curriculum</a>
             </ul>
         </nav>
 
