--- a/crclum.html
+++ b/crclum.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Currículum</title>
     <link rel="stylesheet" href="cssdedylan.css">
+
 </head>
 <body>
     <div class="container">
@@ -14,22 +15,22 @@
                 <p>Dirección: San Ramon, Alajuela, Costa Rica</p>
                 <p>Teléfono: +506 6015 6312</p>
                 <p>Email: dylamayo06@gmail.com</p>
-                <img src="img/yo.jfif" alt="" class="imgs">
+                <img src="img/yo.jfif" alt="Foto de Dylan Mayorga Mena" class="imgs">
             </div>
         </header>
 
         <section class="section">
             <h2>Resumen</h2>
-            <p>Soy un estudiante del CTPCZ que cursa quinto año en la especialidad del desarrollo web, y me gusta mucho el mantenimiento de equipos y se programar en ciertos lenguajes</p>
+            <p>Soy un estudiante del CTPCZ que cursa quinto año en la especialidad del desarrollo web, y me gusta mucho el mantenimiento de equipos y se programar en ciertos lenguajes.</p>
         </section>
 
         <section class="section">
             <h2>Expectativa de la pasantia</h2>
             <div class="item">
                 <h3>CCSS</h3>
-                <p><strong>CCSS:</strong>Caja Costarricense de Seguro Social</p>
+                <p><strong>CCSS:</strong> Caja Costarricense de Seguro Social</p>
                 <p><strong>Fecha:</strong> Del 5-8 al 16-8</p>
-                <p>Espero poder adaptarme y lograr muchos avances ya que es una experiencia nueva y muy enriquesedora para mi y mi compañero y me gustaria mejorar todos los dias y tener nuevos desafios cada dia.</p>
+                <p>Espero poder adaptarme y lograr muchos avances ya que es una experiencia nueva y muy enriquecedora para mí y mi compañero. Me gustaría mejorar todos los días y tener nuevos desafíos cada día.</p>
             </div>
             <!-- Puedes agregar más items de experiencia laboral aquí -->
         </section>
@@ -37,13 +38,13 @@
         <section class="section">
             <h2>Educación</h2>
             <div class="item">
-                <h3>Titulo de Sexto grado</h3>
-                <p><strong>Escolar Publica:</strong> Monseñor Clodoveo Hidalgo Solano</p>
+                <h3>Título de Sexto grado</h3>
+                <p><strong>Escolar Pública:</strong> Monseñor Clodoveo Hidalgo Solano</p>
                 <p><strong>Fecha:</strong> 15-12-2019</p>
             </div>
             <div class="item">
-                <h3>Titulo de Noveno año</h3>
-                <p><strong>Colegial Publica:</strong> Colegio Tecnico Profecional Calle Zamora</p>
+                <h3>Título de Noveno año</h3>
+                <p><strong>Colegio Público:</strong> Colegio Técnico Profesional Calle Zamora</p>
                 <p><strong>Fecha:</strong> 21-11-2022</p>
             </div>
             <!-- Puedes agregar más items de educación aquí -->
@@ -54,7 +55,7 @@
             <ul>
                 <li>Colaborativo</li>
                 <li>Proactivo</li>
-                <li>Trabajo bajo precion</li>
+                <li>Trabajo bajo presión</li>
                 <!-- Puedes agregar más habilidades aquí -->
             </ul>
         </section>
@@ -63,12 +64,14 @@
             <h2>Idiomas</h2>
             <ul>
                 <li>Español - Natal</li>
-                <li>Ingles - A1</li>
+                <li>Inglés - A1</li>
                 <!-- Puedes agregar más idiomas aquí -->
             </ul>
         </section>
 
- 
+        <!-- Botón para volver al índice -->
+        <a href="index.html" class="btn-regreso">Volver al Índice</a>
+
     </div>
 </body>
 </html>
