--- a/index1.html
+++ b/index1.html
@@ -26,7 +26,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav" style="background-color: #167da2;">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Sobre mi</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experienca</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experiencia</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Eduación</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Abilidades</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Intereses</a></li>
