--- a/maidelyn.html
+++ b/maidelyn.html
@@ -5,21 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Maidelyn</title>
   <style>
-
+    body{
+      font-family: Arial, Helvetica, sans-serif;
+    }
     .flex-container {
   font-size: 24px;
-  display: flex;
+  display flex: flex;
   flex-direction: column;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   justify-content: center;
   align-items: stretch;
   align-content: stretch;
   border: black solid 2px;
-  width:800px;
+  width:1000px;
   height: 600px;
   text-align:center;
   margin:auto;
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(255, 226, 173);
 
 }
 
@@ -40,6 +42,7 @@
   align-self: auto;
   order: 0;
 }
+
 /*
 .flex-items:nth-child(3) {
   display: block;
@@ -85,24 +88,28 @@
 }
   </style>
 </head>
-<body style="background-color: gray; background-image: url(https://th.bing.com/th/id/R.86ccbb5469e5192dbdc7c031ca45d0c2?rik=Su5oucJBax0HOA&pid=ImgRaw&r=0);">
+<body style="background-color: gray; background-image: url(https://xmple.com/wallpaper/gradient-linear-black-grey-2560x1440-c2-696969-000000-a-30-f-14.svg);">
   <div class="glow">
-    <a>Pagina</a>
+    <a>Perfil</a>
 
   </div>
   <br>
-  <div class="paginaa" style="margin-left: auto; margin-right: auto;">
-    <div class="flex-container">
-      <div class="flex-items">Maidelyn LOLOlol</div>
+  <div class="paginaa" style="margin-left: auto; margin-right: auto; ">
+    <div class="flex-container" style="background-image: url(https://wallpaperaccess.com/full/1650896.jpg);">
+      <div class="flex-items">
+        <a href="index.html" style="text-decoration: none; color: white;">index</a>
+      </div><br>
+      <div style="border: black 2px solid; width: 500px; float: left; padding: 3px; background-color: rgb(252, 250, 231); height: 90px;">
+      <div class="flex-items" style="color: rgb(179, 16, 70);">Maidelyn Fernández</div>
       <div class="flex-items">desarrollo web</div>
-      <div class="flex-items">
-        <a href="index.html">index</a>
       </div>
-      <div class="flex-items">
-        <img src="https://th.bing.com/th/id/OIP.yGlYj-_49tYW3GSqdaH28gAAAA?rs=1&pid=ImgDetMain" style="border: black solid 2px;">
-      </div>
-      <!--
-      <div class="flex-items">hola</div>  -->
+      <div style=" font-size: 17px; border: black 2px solid; width: 500px; float: left; padding: 3px; background-color: rgb(252, 250, 231); height: 436px;">
+        <div class="flex-items">programadora con el objetivo de hacer el internet un lugar más amigable para todos considerando
+          todas las posibilidades que hay y con lo que se sienten comodos cada uno de mis clientes etc etc etc etc
+        </div>
+        </div>
+
+        
    </div>
   </div>
  
