Actualización del documento
Hice cambios en el documento

--- a/Sebas.html
+++ b/Sebas.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina de prueba</title>
+    <title>Terratips</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -17,20 +17,29 @@
             text-align: center;
         }
         p {
-            color: #666;
+            color: #29b107;
+        }
+        
+        body {
+            background-image: url('Terraria.jpg');
+            background-repeat: no-repeat;
+            background-size: cover;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Pagina de prueba</h1>
+        <h1>Terratips</h1>
     </header>
     <main>
-        <p>Nose paginita de prueba</p>
-        <p>Momazos YETI</p>
+        <p>Hola y bienvenido a una pagina para las personas que vienen empezando terraria por lo que aqui se les mostrara unos tips para los bosses, npc's, objetos y mecanicas etc.</p>
+        <p>A continuacion se presentara un menu de opciones sobre que tema de tips estas interesado en saber</p>
     </main>
     <footer>
-        <p> xd</p>
+        <button>Jefes</button>
+        <button>NPC'S</button>
+        <button>Objetos o items</button>
+        <button>Mecanicas</button>
     </footer>
 </body>
 </html>
